--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "aws-sdk": "^2.656.0",
+    "dotenv": "^8.2.0",
+    "nodemailer": "^6.4.6",
+    "pg": "^8.0.2"
   }
 }
