--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ben Steve",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.656.0",
