--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --bail --exit"
   },
   "keywords": [],
   "author": "Ben Steve",
@@ -14,5 +14,9 @@
     "dotenv": "^8.2.0",
     "nodemailer": "^6.4.6",
     "pg": "^8.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.1"
   }
 }
