--- a/env.sample
+++ b/env.sample
@@ -23,5 +23,6 @@ AWS_SECRET_ACCESS_KEY=awskey
 
 
 --- manageLogs ---
-VERBOSITY=1
-VERBOSITY_TEXT=log
+VERBOSITY=6
+VERBOSITY_INCLUDE=log
+VERBOSITY_EXCLUDE=info
