--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "litlib",
-  "version": "1.4.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha --bail --exit"
-  },
-  "keywords": [],
-  "author": "Ben Steve",
-  "license": "ISC",
-  "dependencies": {
-    "aws-sdk": "^2.656.0",
-    "dotenv": "^8.2.0",
-    "nodemailer": "^6.4.6",
-    "pg": "^8.0.2"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "mocha": "^7.1.1"
-  }
+    "name": "litlib",
+    "version": "1.4.1",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "mocha --bail --exit"
+    },
+    "keywords": [],
+    "author": "Ben Steve",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^8.2.0"
+    },
+    "peerDependencies": {
+        "aws-sdk": "^2.656.0",
+        "nodemailer": "^6.4.6",
+        "pg": "^8.0.2",
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "chai": "^4.2.0",
+        "mocha": "^7.1.1"
+    }
 }
