--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "author": "Ben Steve",
     "license": "ISC",
     "dependencies": {
-        "dotenv": "^8.2.0"
-    },
-    "peerDependencies": {
+        "dotenv": "^8.2.0",
         "aws-sdk": "^2.656.0",
         "nodemailer": "^6.4.6",
-        "pg": "^8.0.2",
+        "pg": "^8.0.2"
+    },
+    "peerDependencies": {
         "express": "^4.17.1"
     },
     "devDependencies": {
