--- a/env.sample
+++ b/env.sample
@@ -18,6 +18,7 @@ EMAIL_PORT=587
 
 --- filestore.s3 ---
 S3_BUCKET=bucket
+S3_REGION=us-east-1
 AWS_ACCESS_KEY_ID=awsid
 AWS_SECRET_ACCESS_KEY=awskey
 
