--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "chai": "^4.2.0",
-        "mocha": "^7.1.1"
+        "mocha": "^7.1.1",
+        "mock-aws-s3": "^4.0.1"
     }
 }
