--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "mocha --bail --exit"
+        "test": "mocha --bail --exit",
+        "test-coverage": "nyc mocha --bail --exit"
     },
     "keywords": [],
     "author": "Ben Steve",
@@ -21,6 +22,7 @@
     "devDependencies": {
         "chai": "^4.2.0",
         "mocha": "^7.2.0",
-        "mock-aws-s3": "^4.0.1"
+        "mock-aws-s3": "^4.0.1",
+        "nyc": "^15.1.0"
     }
 }
