--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "litlib",
-    "version": "2.0.0-alpha.2",
+    "version": "2.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
