--- a/env.sample
+++ b/env.sample
@@ -25,5 +25,5 @@ AWS_SECRET_ACCESS_KEY=awskey
 
 --- manageLogs ---
 VERBOSITY=6
-VERBOSITY_INCLUDE=log
-VERBOSITY_EXCLUDE=info
+VERBOSITY_INCLUDE=error,warn,debug
+VERBOSITY_EXCLUDE=log
